--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -18,6 +18,10 @@
     <input [(colorPicker)]="colors[2]" [style.background]="colors[2]" class="colorPicker"/>
     <button md-raised-button (click)="resetToDefaultColors()">Reset to default colors</button>
   </div>
+
+  <div>
+    <input placeholder="feedback text"/>
+  </div>
 </div>
 
 <div class="divider"></div>
