Updates to the form allowing the demo to be customized.

--- a/src/app/convai-checker.component.html
+++ b/src/app/convai-checker.component.html
@@ -5,12 +5,16 @@
     [fontSize]="fontSize"
     [indicatorWidth]="13"
     [indicatorHeight]="13"
-    [gradientColors]="gradientColors"
+    [gradientColors]="demoSettings.gradientColors"
+    [scoreThresholds]="demoSettings.scoreThresholds"
+    [feedbackText]="demoSettings.feedbackText"
+    [configurationInput]="demoSettings.configuration"
+    [showPercentage]="demoSettings.showPercentage"
+    [showMoreInfoLink]="demoSettings.showMoreInfoLink"
     [score]="getMaxScore(analyzeCommentResponse)"
     [hasScore]="analyzeCommentResponse !== null"
     [canAcceptFeedback]="canAcceptFeedback"
     [feedbackRequestInProgress]="feedbackRequestInProgress"
-    [configurationInput]="configuration"
     [initializeErrorMessage]="initializeErrorMessage"
     [analyzeErrorMessage]="analyzeErrorMessage"
     (commentFeedbackSubmitted)="onCommentFeedbackReceived($event)"
