--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -31,18 +31,19 @@
         <div>
           <div id="noBorderButtonscoreInfo"
                class="widgetText"
-               *ngIf="hasScore && shouldShowMessageForScore(score) && !analyzeErrorMessage"
+               *ngIf="hasScore && !analyzeErrorMessage"
                [style.fontSize]="fontSize"
                tabindex=0
                role="status"
                [attr.aria-hidden]="!showScore || isPlayingLoadingAnimation || isPlayingShowOrHideDetailsAnimation">
-            <span>{{(score.toFixed(2) * 100).toFixed(0)}}% likely to be perceived as "</span><span
-              class="link"
-              role="link"
-              tabindex=0
-              (keyup.enter)="notifyModelInfoLinkClicked()"
-              (keyup.space)="notifyModelInfoLinkClicked()"
-              (click)="notifyModelInfoLinkClicked()">toxic</span><span>"</span>
+            <span *ngIf="showPercentage">{{(score.toFixed(2) * 100).toFixed(0)}}% </span><span>{{getFeedbackTextForScore(score)}} </span><span
+               *ngIf="showMoreInfoLink"
+               class="link"
+               role="link"
+               tabindex=0
+               (keyup.enter)="notifyModelInfoLinkClicked()"
+               (keyup.space)="notifyModelInfoLinkClicked()"
+               (click)="notifyModelInfoLinkClicked()">Learn more.</span>
           </div>
 
           <div class="error" *ngIf="initializeErrorMessage">
@@ -51,11 +52,11 @@
           <div class="error" *ngIf="analyzeErrorMessage">
             {{analyzeErrorMessage}}
           </div>
-        </div> <!-- End configuration EXTERNAL -->
+        </div><!-- End configuration DEMO_SITE or EXTERNAL -->
+
       </div> <!-- End layerText -->
 
       <div class="interactiveElement">
-
         <div *ngIf="configuration === configurationEnum.EXTERNAL">
           <div id="infoButtonContainer" class="infoButtonContainer">
             <button *ngIf="hasScore"
@@ -85,7 +86,7 @@
         </div>
 
       </div> <!-- End interactiveElement -->
-    </div>
+    </div> <!-- End layer1 -->
 
     <div id="layer2" [ngClass]="{'horizontal-container': true,
                                  'detailsContainer': true,
