--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div>
-    <md-select class="setting" placeholder="Feedback style" [(ngModel)]="selectedConfiguration">
+  <div class="setting">
+    <md-select placeholder="Feedback style" [(ngModel)]="demoSettings.configuration">
       <md-option *ngFor="let configuration of configurations" [value]="configuration">
         {{ configuration }}
       </md-option>
@@ -8,30 +8,93 @@
   </div>
 
   <div class="setting">
-    <md-slide-toggle>Use gapi</md-slide-toggle>
-  </div>
-
-  <div class="setting">
-    Gradient colors:
-    <input [(colorPicker)]="colors[0]" [style.background]="colors[0]" class="colorPicker"/>
-    <input [(colorPicker)]="colors[1]" [style.background]="colors[1]" class="colorPicker"/>
-    <input [(colorPicker)]="colors[2]" [style.background]="colors[2]" class="colorPicker"/>
+    Gradient demoSettings.gradientColors:
+    <input readonly
+           [(colorPicker)]="demoSettings.gradientColors[0]"
+           (colorPickerChange)="demoSettings.gradientColors = demoSettings.gradientColors.slice()"
+           [style.background]="demoSettings.gradientColors[0]"
+           class="colorPicker"/>
+    <input readonly
+           [(colorPicker)]="demoSettings.gradientColors[1]"
+           (colorPickerChange)="demoSettings.gradientColors = demoSettings.gradientColors.slice()"
+           [style.background]="demoSettings.gradientColors[1]"
+           class="colorPicker"/>
+    <input readonly
+           [(colorPicker)]="demoSettings.gradientColors[2]"
+           (colorPickerChange)="demoSettings.gradientColors = demoSettings.gradientColors.slice()"
+           [style.background]="demoSettings.gradientColors[2]"
+           class="colorPicker"/>
     <button md-raised-button (click)="resetToDefaultColors()">Reset to default colors</button>
   </div>
 
   <div>
-    <input placeholder="feedback text"/>
+    <div class="setting">
+      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.feedbackText[0]"
+               (input)="demoSettings.feedbackText = demoSettings.feedbackText.slice();"
+               placeholder="Feedback text for a low toxicity"/>
+      </md-input-container>
+      <md-input-container [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.scoreThresholds[0]"
+               (input)="demoSettings.scoreThresholds = demoSettings.scoreThresholds.slice()"
+               type="number"
+               placeholder="Min threshold for displaying feedback"/>
+      </md-input-container>
+    </div>
+
+    <div class="setting">
+      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.feedbackText[1]"
+               (input)="demoSettings.feedbackText = demoSettings.feedbackText.slice();"
+               placeholder="Feedback text for a medium toxicity"/>
+      </md-input-container>
+      <md-input-container [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.scoreThresholds[1]"
+               (input)="demoSettings.scoreThresholds = demoSettings.scoreThresholds.slice()"
+               type="number"
+               placeholder="Threshold for medium toxicity"/>
+      </md-input-container>
+    </div>
+
+    <div class="setting">
+      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.feedbackText[2]"
+               (input)="demoSettings.feedbackText = demoSettings.feedbackText.slice();"
+               placeholder="Feedback text for a high toxicity"/>
+      </md-input-container>
+      <md-input-container [floatPlaceholder]="'always'">
+        <input mdInput [(ngModel)]="demoSettings.scoreThresholds[2]"
+               (input)="demoSettings.scoreThresholds = demoSettings.scoreThresholds.slice()"
+               type="number"
+               placeholder="Threshold for high toxicity"/>
+      </md-input-container>
+    </div>
+
+  </div>
+
+  <div class="setting">
+    <md-slide-toggle [(ngModel)]="demoSettings.showPercentage">Show percentage</md-slide-toggle>
+  </div>
+
+  <div class="setting">
+    <md-slide-toggle [(ngModel)]="demoSettings.showMoreInfoLink">Show more info link</md-slide-toggle>
+  </div>
+
+  <div class="setting">
+    <md-slide-toggle [(ngModel)]="demoSettings.useGapi" (change)="updateApiKey($event)">Use gapi</md-slide-toggle>
+    <md-input-container>
+      <input mdInput [disabled]="!demoSettings.useGapi" [(ngModel)]="demoSettings.apiKey" placeholder="API key"/>
+    </md-input-container>
   </div>
 </div>
 
 <div class="divider"></div>
 
 <!-- TODO(rachelrosen): Debug why the gradientColors data binding doesn't
-     propogate below when directly binding directly to the "colors" variable. -->
+     propogate below when directly binding directly to the "demoSettings.gradientColors" variable. -->
 <convai-checker
    [inputId]="'checkerTextarea'"
-   [gradientColors]="[colors[0], colors[1], colors[2]]"
-   [configuration]="selectedConfiguration"
+   [demoSettings]="demoSettings"
    serverUrl="">
   Loading...
 </convai-checker>
