Adds emoji capability to the demo customization.

--- a/src/app/customizable-demo-form.component.css
+++ b/src/app/customizable-demo-form.component.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
+body {
+ font-family: 'Roboto', sans-serif;
+}
+
 .colorPicker {
   display: inline-block;
   width: 40px;
