Updates UI to include a default demosettings.

--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -36,14 +36,14 @@
                tabindex=0
                role="status"
                [attr.aria-hidden]="!showScore || isPlayingLoadingAnimation || isPlayingShowOrHideDetailsAnimation">
-            <span *ngIf="showPercentage" id="percentage">{{(score.toFixed(2) * 100).toFixed(0)}}% </span><span id="feedbackText" [innerHTML]="parseEmojis(getFeedbackTextForScore(score))"></span><span
+            <span id="feedbackText" [innerHTML]="parseEmojis(getFeedbackTextForScore(score))"></span><span *ngIf="showPercentage" id="percentage">({{score.toFixed(2)}})</span><span
                *ngIf="showMoreInfoLink"
                class="link"
                role="link"
                tabindex=0
                (keyup.enter)="notifyModelInfoLinkClicked()"
                (keyup.space)="notifyModelInfoLinkClicked()"
-               (click)="notifyModelInfoLinkClicked()">Learn more.</span>
+               (click)="notifyModelInfoLinkClicked()">Learn more</span>
           </div>
 
           <div class="error" *ngIf="initializeErrorMessage">
