--- a/src/app/perspective-status.component.css
+++ b/src/app/perspective-status.component.css
@@ -37,7 +37,7 @@
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.05em;
-  display: flex;
+  width: 100%;
 }
 
 #percentage {
@@ -46,7 +46,6 @@
 
 #feedbackText {
   margin-right: 4px;
-  display: flex;
 }
 
 .widgetText a {
@@ -59,7 +58,7 @@
 }
 
 .layerText {
-  flex: 0 1 60%;
+  flex: 0 1 64%;
   padding-right: 10px;
   padding-top: 2px;
 }
@@ -106,7 +105,7 @@
   margin-left: auto;
   display: flex;
   justify-content: flex-end;
-  flex: 1 1 40%;
+  min-width: fit-content;
   padding-top: 1px;
 }
 
