Updates the DemoSettings interface, and adds the ability to customize the feedback prompt text (currently it is always 'Seem wrong?'). Implmentation of the hide icon options will come later.

--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -81,7 +81,7 @@
                [disabled]="!showScore || isPlayingLoadingAnimation || layersAnimating"
                (click)="feedbackContainerClicked()"
                tabindex=0>
-            Seem wrong?
+            {{feedbackPromptText}}
           </button>
         </div>
 
@@ -137,7 +137,7 @@
                    [disabled]="!showScore || isPlayingLoadingAnimation || layersAnimating"
                    (click)="feedbackContainerClicked()"
                    tabindex=0>
-                Seem wrong?
+                {{feedbackPromptText}}
               </button>
               <div id="seemWrongQuestion" *ngIf="showFeedbackQuestion && !feedbackRequestInProgress">
                 <div class="feedbackQuestion widgetText" tabindex=0>Is this text toxic?</div>
