Experiment with showing generated demosettings to the user, for plugging into widget.

--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -161,6 +161,13 @@
 
 <div class="divider"></div>
 
+<div>
+  Your demo settings:
+  <textarea readOnly>{{getPrintableDemoSettings()}}</textarea>
+</div>
+
+<div class="divider"></div>
+
 <convai-checker
    [inputId]="'checkerTextarea'"
    [demoSettings]="getDemoSettings()"
