Updates variable name.

--- a/src/app/convai-checker.component.html
+++ b/src/app/convai-checker.component.html
@@ -17,7 +17,7 @@
     [feedbackRequestInProgress]="feedbackRequestInProgress"
     [initializeErrorMessage]="initializeErrorMessage"
     [analyzeErrorMessage]="analyzeErrorMessage"
-    [feedbackPromptText]="demoSettings.feedbackPromptText"
+    [userFeedbackPromptText]="demoSettings.userFeedbackPromptText"
     (commentFeedbackSubmitted)="onCommentFeedbackReceived($event)"
     (scoreChangeAnimationCompleted)="handleScoreChangeAnimationCompleted()"
     (modelInfoLinkClicked)="handleModelInfoLinkClicked()">
