--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -154,7 +154,7 @@
 
   <div class="setting">
     <md-input-container>
-      <input mdInput [(ngModel)]="feedbackPromptText" placeholder="Feedback prompt"/>
+      <input mdInput [(ngModel)]="userFeedbackPromptText" placeholder="Feedback prompt"/>
     </md-input-container>
   </div>
 </div>
