Starting to implement states for hiding the status widget.

--- a/src/app/convai-checker.component.html
+++ b/src/app/convai-checker.component.html
@@ -18,6 +18,8 @@
     [initializeErrorMessage]="initializeErrorMessage"
     [analyzeErrorMessage]="analyzeErrorMessage"
     [userFeedbackPromptText]="demoSettings.userFeedbackPromptText"
+    [hideLoadingIconAfterLoad]="demoSettings.hideLoadingIconAfterLoad"
+    [hideLoadingIconForScoresBelowMinThreshold]="demoSettings.hideLoadingIconForScoresBelowMinThreshold"
     (commentFeedbackSubmitted)="onCommentFeedbackReceived($event)"
     (scoreChangeAnimationCompleted)="handleScoreChangeAnimationCompleted()"
     (modelInfoLinkClicked)="handleModelInfoLinkClicked()">
