Initial implementation for animations to hide and reveal the loading icon for either hiding it for scores below the threshold, or hiding it when loading completes.

--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -138,11 +138,11 @@
   </div>
 
   <div class="setting">
-    <md-slide-toggle disabled [(ngModel)]="hideLoadingIconAfterLoad">Hide loading icon after load (Not yet implemented)</md-slide-toggle>
+    <md-slide-toggle [(ngModel)]="hideLoadingIconAfterLoad">Hide loading icon after load</md-slide-toggle>
   </div>
 
   <div class="setting">
-    <md-slide-toggle disabled [(ngModel)]="hideLoadingIconForScoresBelowMinThreshold">Hide loading icon for scores below the minimum threshold. (Not yet implemented) </md-slide-toggle>
+    <md-slide-toggle [(ngModel)]="hideLoadingIconForScoresBelowMinThreshold">Hide loading icon for scores below the minimum threshold.</md-slide-toggle>
   </div>
 
   <div class="setting">
