--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -12,6 +12,8 @@
          [style.width]="indicatorWidth"
          [style.height]="indicatorHeight"
          [hidden]="shouldHideStatusWidget"
+         [attr.aria-hidden]="shouldHideStatusWidget || isPlayingShowOrHideLoadingWidgetAnimation"
+         [disabled]="isPlayingShowOrHideLoadingWidgetAnimation"
          role="button"
          [attr.aria-label]=
             "getAnimationA11yLabel(showScore, isPlayingLoadingAnimation, isPlayingShowOrHideDetailsAnimation)"
