Some initial work on allowing a setting for a different loading widget style.

--- a/src/app/convai-checker.component.html
+++ b/src/app/convai-checker.component.html
@@ -19,6 +19,8 @@
     [userFeedbackPromptText]="demoSettings.userFeedbackPromptText"
     [hideLoadingIconAfterLoad]="demoSettings.hideLoadingIconAfterLoad"
     [hideLoadingIconForScoresBelowMinThreshold]="demoSettings.hideLoadingIconForScoresBelowMinThreshold"
+    [alwaysHideLoadingIcon]="demoSettings.alwaysHideLoadingIcon"
+    [loadingIconStyle]="demoSettings.loadingIconStyle"
     (commentFeedbackSubmitted)="onCommentFeedbackReceived($event)"
     (scoreChangeAnimationCompleted)="handleScoreChangeAnimationCompleted()"
     (modelInfoLinkClicked)="handleModelInfoLinkClicked()">
