--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -28,6 +28,15 @@
            #emojiStatusWidget
            class="dot emojiWidget"
            (click)="toggleScore()">
+        <img #smileEmoji class="iconEmoji"
+             [ngClass]="{hiddenEmoji: !isPlayingLoadingAnimation && score >= scoreThresholds[1]}"
+             src="assets/grinning_face.png">
+        <img #neutralEmoji class="iconEmoji"
+             [ngClass]="{hiddenEmoji: !isPlayingLoadingAnimation && (score < scoreThresholds[1] || score >= scoreThresholds[2])}"
+             src="assets/thinking_face.png">
+        <img #sadEmoji class="iconEmoji"
+             [ngClass]="{hiddenEmoji: !isPlayingLoadingAnimation && score < scoreThresholds[2]}"
+             src="assets/disappointed_face.png">
       </button>
     </div>
   </div>
